# Persloop-viewer

./: README.md
PersLoop-Viewer-Script/: gui.m  image_plot.m  main.m  morph.m  mouse_fcn.m  plot_mesh2.m  plot_mesh3.m  read_filtration.m  read_off.m  read_off_image.m
PersLoop-Viewer-Script/input/: botijo_002.off  botijo_002_pers  botijo_002var.mat  train-vol2-2_pers
PersLoop-Viewer-Script/input/botijo_002floops/: 12811.off  12811comb.off  14123.off  14123comb.off  14653.off  14653comb.off  15649.off  15649comb.off  17734.off  17734comb.off  18543.off  18543comb.off  18887.off  18887comb.off  19315.off  19315comb.off  19493.off  19493comb.off  19627.off  19627comb.off  19785.off  19785comb.off  21155.off  21155comb.off  21613.off  21613comb.off  21632.off  21632comb.off
perloop-src/: CMakeLists.txt  INSTALL_README  SOFTWARE_README
perloop-src/src/: CMakeLists.txt  ParseCommand.h  SimplexNode.h  SimplicialComplex.cpp  SimplicialComplex.h  UnionFindDeletion.cpp  persloop.cpp  trygraph.h
perloop-src/src/simp/: SimplicialComplex.cpp
persloop-bin/persloop-bin/: persloop
persloop-bin/persloop-bin/MACOSX/: persloop
persloop-bin/persloop-bin/UBUNTU/: persloop
persloop-example/: genus3_r_200_pers  torun
persloop-src-all-dim/: INSTALL_README  SOFTWARE_README
persloop-src-all-dim/src/: AnnotationMatrix.cpp  CMakeLists.txt  Legal.h  ParseCommand.h  ShortestGraph.h  SimplexNode.h  SimplicialComplex.h  persloop.cpp  persloop2.cpp
persloop-src-all-dim/src/simp/: AnnotationMatrix.cpp  Simpers.cpp  SimplexNode.h  SimplicialComplex.h
